--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,13 @@
+:root {
+  --cor-js-primaria: #ffcc00;
+  --cor-js-secundaria: #413401;
+  --cor-py-primaria: #FEDA52;
+  --cor-py-secundaria: #4680B0;
+  --tamanho-fonte: 16px;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   background-color: #f4f4f4;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1em;
-}
-
-section {
-  padding: 2em;
-  text-align: center;
-}
-
-h1 {
-  color: #333;
-}
-
-p {
-  color: #555;
 }
 
 .features {
@@ -31,21 +15,7 @@ p {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 2em;
-  margin-top: 2em;
   text-align: left;
-}
-
-.features h2 {
-  text-align: center;
-}
-
-.features ul {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.features ul li {
-  list-style: none;
 }
 
 form {
@@ -58,22 +28,18 @@ form {
   margin-top: 2em;
 }
 
-input,
-button {
-  display: block;
-  width: 100%;
-  padding: 1em;
-  margin-bottom: 1em;
-  box-sizing: border-box;
+.bg-gradient {
+  background: radial-gradient(circle, var(--cor-js-primaria), var(--cor-js-secundaria));
+  color: #ffffff; /* Define a cor do texto para branco ou outra cor que seja visível no degradê */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-button {
-  background-color: #333;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+.data-js.bg-gradient {
+  background: linear-gradient(to right, var(--cor-js-primaria), var(--cor-js-secundaria));
 }
 
-button:hover {
-  background-color: #555;
+.data-python.bg-gradient {
+  background: linear-gradient(to right, var(--cor-py-primaria), var(--cor-py-secundaria));
 }
