--- a/css/styles.css
+++ b/css/styles.css
@@ -1,45 +1,63 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-  --cor-js-primaria: #ffcc00;
-  --cor-js-secundaria: #413401;
-  --cor-py-primaria: #FEDA52;
-  --cor-py-secundaria: #4680B0;
-  --tamanho-fonte: 16px;
+  --primary-color: #001f3f;
+  --secondary-color: #000000;
+  --light: #ffffff;
+  --light-blue: #808F9F
+
 }
 
 body {
-  background-color: #f4f4f4;
+  background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color));
+  font-size: 62.5%;
 }
 
-.features {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 2em;
-  text-align: left;
+header {
+  background: var(--light);
+  padding: 1rem;
 }
 
-form {
-  max-width: 400px;
-  margin: 0 auto;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 2em;
-  margin-top: 2em;
+section {
+  margin: 2rem;
 }
 
-.bg-gradient {
-  background: radial-gradient(circle, var(--cor-js-primaria), var(--cor-js-secundaria));
-  color: #ffffff; /* Define a cor do texto para branco ou outra cor que seja visível no degradê */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+h1 {
+  color: var(--primary-color);
 }
 
-.data-js.bg-gradient {
-  background: linear-gradient(to right, var(--cor-js-primaria), var(--cor-js-secundaria));
+h2, h3 {
+  color: var(--light-blue);
 }
 
-.data-python.bg-gradient {
-  background: linear-gradient(to right, var(--cor-py-primaria), var(--cor-py-secundaria));
+.container-itens {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
+}
+
+.skill-item {
+  background-color: rgba(255, 255, 255, 0.1); 
+  padding: 1rem;
+  text-align: center;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  
+  border-radius: 3px; 
+  overflow: hidden; 
+  border: 1px solid rgba(255, 255, 255, 0.3); 
+}
+
+.skill-item:hover {
+  transform: scale(1.1);
+  background-color: rgba(255, 255, 255, 0.3); 
+}
+
+footer {
+  padding: 1rem;
+  background: var(--primary-color);
+  color: var(--light-blue);
 }
