--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
 body {
   background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color));
   font-size: 62.5%;
+
+  font-family: 'Space Mono', monospace  !important;
 }
 
 header {
@@ -28,36 +30,25 @@ section {
 
 h1 {
   color: var(--primary-color);
+  font-weight: bold !important;
+  font-size: 4rem !important;
 }
 
 h2, h3 {
   color: var(--light-blue);
 }
 
-.container-itens {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 1rem;
-}
-
-.skill-item {
-  background-color: rgba(255, 255, 255, 0.1); 
-  padding: 1rem;
-  text-align: center;
-  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  
-  border-radius: 3px; 
-  overflow: hidden; 
-  border: 1px solid rgba(255, 255, 255, 0.3); 
-}
-
-.skill-item:hover {
-  transform: scale(1.1);
-  background-color: rgba(255, 255, 255, 0.3); 
+.full-page {
+  height: 100vh;
 }
 
 footer {
   padding: 1rem;
   background: var(--primary-color);
   color: var(--light-blue);
+  font-weight: bold !important;
+}
+
+footer a:hover {
+  color: var(--light);
 }
